fix navigation shifting, signout routing

--- a/src/components/Themes/Themes.css
+++ b/src/components/Themes/Themes.css
@@ -26,11 +26,6 @@
   color: var(--text-color);
   line-height: 2.4rem;
   margin: 1rem;
-
-  @media only screen and (max-width: 37.5em) {
-    font-size: 2rem;
-    padding: 0 0 2rem 0;
-  }
 }
 .switch {
   position: relative;
